# kyber

./: .gitignore  README.md  install.sh  pyproject.toml  test_docker.sh
.githooks/: post-commit  pre-commit
bridge/: package.json
bridge/src/: index.ts
kyber/: __init__.py  __main__.py  meta_messages.py
kyber/agent/: __init__.py  context.py  core.py  display.py  intent.py  loop.py  memory.py  narrator.py  orchestrator.py  planner.py  skills.py  subagent.py  task_registry.py  voice.py  worker.py  workspace_index.py
kyber/agent/tools/: __init__.py  clarify.py  cron.py  delegate.py  filesystem.py  mcp.py  memory.py  message.py  notebook.py  registry.py  remote.py  session_search.py  shell.py  skills.py  spawn.py  task_status.py  todo.py  web.py
kyber/bus/: events.py  queue.py
kyber/channels/: __init__.py  base.py  discord.py  errors.py  feishu.py  manager.py  telegram.py  whatsapp.py
kyber/cli/: chat_repl.py  commands.py  slash_commands.py  tui.py
kyber/commands/: __init__.py  builtin.py  pricing.py  registry.py
kyber/config/: __init__.py  loader.py  schema.py
kyber/cron/: __init__.py  paths.py  runtime.py  service.py  types.py
kyber/dashboard/: __init__.py  server.py
kyber/dashboard/static/: app.js  index.html  styles.css
kyber/gateway/: api.py
kyber/heartbeat/: __init__.py
kyber/network/: __init__.py  host.py  notebook.py  protocol.py  rpc.py  spoke.py  state.py
kyber/providers/: __init__.py  base.py  codex_auth.py  codex_provider.py  history.py  litellm_provider.py  openai_provider.py  openhands_provider.py  pydantic_provider.py  strands_provider.py
kyber/security/: clamscan.py  scan.py
kyber/service/: __init__.py  manager.py
kyber/session/: manager.py
kyber/skillhub/: manager.py  skills_sh.py
kyber/skills/: README.md
kyber/skills/github/: SKILL.md
kyber/skills/scheduled-tasks/: SKILL.md
kyber/skills/security-scan/: SKILL.md
kyber/skills/summarize/: SKILL.md
kyber/skills/tmux/: SKILL.md
kyber/skills/weather/: SKILL.md
kyber/utils/: __init__.py  helpers.py  openhands_runtime.py
kyber_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bump-version.sh  publish.sh
tests/: test_agent_process_direct_tasks.py  test_agent_session_serialization.py  test_context_cron_guardrails.py  test_cron_paths.py  test_cron_runtime_context.py  test_cron_tool_context.py  test_custom_provider_env_sanitization.py  test_dashboard_mcp_api.py  test_dashboard_skills_install_path.py  test_gateway_cancel_delivery.py  test_gateway_chat_api.py  test_gateway_task_visibility.py  test_intent_response_content.py  test_mcp_tools.py  test_memory_tool_workspace_storage.py  test_meta_messages_tool_describe.py  test_openai_provider_content_sanitization.py  test_orchestrator_direct_inline.py  test_provider_native_followthrough.py  test_pydantic_provider_mode.py  test_pydantic_provider_task.py  test_ref_safety.py  test_session_tool_context_reuse.py  test_shell_interactive_guards.py  test_skill_manage_workspace_paths.py  test_skillhub_manifest.py  test_status_intro.py  test_status_progress_updates.py  test_task_registry.py  test_tool_status_text.py  test_tool_validation.py  test_web_fetch_diagnostics.py  test_worker_progress_callbacks.py  test_workspace_scaffold.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
workspace/memory/: MEMORY.md
